# jupyenv

./: flake.nix  pyproject.toml
modules/kernels/nix/: default.nix
modules/kernels/python/: pyproject.toml
modules/types/: poetry.nix
